# pi_vision

./: CMakeCache.txt  CMakeLists.txt  Distance_good  HP_CALIB.yml  Makefile  Nonlinear_controller_fcn_control_rf_w_ailerons.h  Nonlinear_controller_fcn_control_rf_w_ailerons_types.h  a.out  am7x.c  am7x.cpp  am7x.h  cmake_install.cmake  distance.cpp  distance_good.cpp  distance_good.hpp  exec  rtGetInf.c  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  calib.cpp  cmake_install.cmake
calibration/images/: camera_calib.py
distance/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  distance  distance_good.cpp  distance_good1.cpp  exec
uselss?/: CMakeLists.txt  Nonlinear_controller_fcn_control_rf_w_ailerons.c  README.txt  distance.cpp  rtGetInf.h
