cmake_minimum_required(VERSION 3.10)
project( PI_VISION CXX)

find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
# find_package( Openmp Openmp )
# include_directories( ${Openmp_INCLUDE_DIRS} )
add_executable( calib calib.cpp)
target_link_libraries( calib ${OpenCV_LIBS} )
target_link_libraries(calib m wiringPi pthread)
